// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowLogDetails should render 1`] = `
<DocumentFragment>
  <div
    class="css-ayshjd"
  >
    <div
      class="chakra-tabs css-1xpribl"
    >
      <div
        aria-orientation="horizontal"
        class="chakra-tabs__tablist css-3qqir2"
        role="tablist"
      >
        <button
          aria-controls="tabs-:r0:--tabpanel-0"
          aria-disabled="false"
          aria-selected="true"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="0"
          data-testid="tabs-tab"
          id="tabs-:r0:--tab-0"
          role="tab"
          tabindex="0"
          type="button"
        >
          Table
        </button>
        <button
          aria-controls="tabs-:r0:--tabpanel-1"
          aria-disabled="false"
          aria-selected="false"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="1"
          data-testid="tabs-tab"
          id="tabs-:r0:--tab-1"
          role="tab"
          tabindex="-1"
          type="button"
        >
          JSON
        </button>
      </div>
      <div
        class="chakra-tabs__tab-panels css-8atqhb"
      >
        <div
          aria-labelledby="tabs-:r0:--tab-0"
          class="chakra-tabs__tab-panel css-18ruvq3"
          data-testid="tabs-tab-panel"
          id="tabs-:r0:--tabpanel-0"
          role="tabpanel"
          tabindex="0"
        >
          <table
            class="chakra-table css-1pdvp0t"
          >
            <tbody
              class="css-0"
            >
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  start_time
                </th>
                <td
                  class="css-12h06wr"
                >
                  1698940029
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  end_time
                </th>
                <td
                  class="css-12h06wr"
                >
                  1698940352
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_ip
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_name
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_name_aggr
                </th>
                <td
                  class="css-12h06wr"
                >
                  "prometheus-calico-node-prometheus-*"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_namespace
                </th>
                <td
                  class="css-12h06wr"
                >
                  "tigera-prometheus"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  nat_outgoing_ports
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_port
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_type
                </th>
                <td
                  class="css-12h06wr"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_labels
                </th>
                <td
                  class="css-12h06wr"
                >
                  {"labels":["app.kubernetes.io/managed-by=prometheus-operator","app.kubernetes.io/version=2.45.0","app.kubernetes.io/instance=calico-node-prometheus","app.kubernetes.io/name=prometheus","statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0","prometheus=calico-node-prometheus","controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65","operator.prometheus.io/shard=0","operator.prometheus.io/name=calico-node-prometheus"]}
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_ip
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_name
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_name_aggr
                </th>
                <td
                  class="css-12h06wr"
                >
                  "fluentd-node-*"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_namespace
                </th>
                <td
                  class="css-12h06wr"
                >
                  "tigera-fluentd"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_port
                </th>
                <td
                  class="css-12h06wr"
                >
                  9081
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_type
                </th>
                <td
                  class="css-12h06wr"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_labels
                </th>
                <td
                  class="css-12h06wr"
                >
                  {"labels":["app.kubernetes.io/name=fluentd-node","controller-revision-hash=7c887f95cb","k8s-app=fluentd-node","pod-template-generation=1"]}
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_namespace
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_name
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_port
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_port_num
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_domains
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-labelledby="tabs-:r0:--tab-1"
          class="chakra-tabs__tab-panel css-18ruvq3"
          data-testid="tabs-tab-panel"
          hidden=""
          id="tabs-:r0:--tabpanel-1"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="containerStyles"
          >
            <div
              class="_2bkNM"
              role="list"
            >
              <span
                aria-controls=":jsnvw:1:"
                aria-expanded="true"
                aria-label="collapse JSON"
                class="_oLqym _f10Tu _1MFti _1LId0"
                role="button"
                tabindex="0"
              />
              <span
                class="_3uHL6 _3eOF8"
              >
                {
              </span>
              <div
                id=":jsnvw:1:"
              >
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    start_time:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    1698940029
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    end_time:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    1698940352
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_ip:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_name:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_name_aggr:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "prometheus-calico-node-prometheus-*"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_namespace:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "tigera-prometheus"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    nat_outgoing_ports:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_port:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_type:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "wep"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:2:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_oLqym _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStyles"
                  >
                    source_labels:
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:2:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:3:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_oLqym _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStyles"
                      >
                        labels:
                      </span>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:3:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/managed-by=prometheus-operator"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/version=2.45.0"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/instance=calico-node-prometheus"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/name=prometheus"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "prometheus=calico-node-prometheus"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "operator.prometheus.io/shard=0"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "operator.prometheus.io/name=calico-node-prometheus"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_ip:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_name:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_name_aggr:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "fluentd-node-*"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_namespace:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "tigera-fluentd"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_port:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    9081
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_type:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "wep"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:4:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_oLqym _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStyles"
                  >
                    dest_labels:
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:4:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:5:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_oLqym _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStyles"
                      >
                        labels:
                      </span>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:5:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/name=fluentd-node"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "controller-revision-hash=7c887f95cb"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "k8s-app=fluentd-node"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "pod-template-generation=1"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_namespace:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_name:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_port:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_port_num:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_domains:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                </div>
              </div>
              <span
                class="_3uHL6 _3eOF8"
              >
                }
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`FlowLogDetails should render json 1`] = `
<DocumentFragment>
  <div
    class="css-ayshjd"
  >
    <div
      class="chakra-tabs css-1xpribl"
    >
      <div
        aria-orientation="horizontal"
        class="chakra-tabs__tablist css-3qqir2"
        role="tablist"
      >
        <button
          aria-controls="tabs-:r1:--tabpanel-0"
          aria-disabled="false"
          aria-selected="false"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="0"
          data-testid="tabs-tab"
          id="tabs-:r1:--tab-0"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Table
        </button>
        <button
          aria-controls="tabs-:r1:--tabpanel-1"
          aria-disabled="false"
          aria-selected="true"
          class="chakra-tabs__tab css-1mvhvrc"
          data-index="1"
          data-testid="tabs-tab"
          id="tabs-:r1:--tab-1"
          role="tab"
          tabindex="0"
          type="button"
        >
          JSON
        </button>
      </div>
      <div
        class="chakra-tabs__tab-panels css-8atqhb"
      >
        <div
          aria-labelledby="tabs-:r1:--tab-0"
          class="chakra-tabs__tab-panel css-18ruvq3"
          data-testid="tabs-tab-panel"
          hidden=""
          id="tabs-:r1:--tabpanel-0"
          role="tabpanel"
          tabindex="0"
        >
          <table
            class="chakra-table css-1pdvp0t"
          >
            <tbody
              class="css-0"
            >
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  start_time
                </th>
                <td
                  class="css-12h06wr"
                >
                  1698940029
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  end_time
                </th>
                <td
                  class="css-12h06wr"
                >
                  1698940352
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_ip
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_name
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_name_aggr
                </th>
                <td
                  class="css-12h06wr"
                >
                  "prometheus-calico-node-prometheus-*"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_namespace
                </th>
                <td
                  class="css-12h06wr"
                >
                  "tigera-prometheus"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  nat_outgoing_ports
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_port
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_type
                </th>
                <td
                  class="css-12h06wr"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  source_labels
                </th>
                <td
                  class="css-12h06wr"
                >
                  {"labels":["app.kubernetes.io/managed-by=prometheus-operator","app.kubernetes.io/version=2.45.0","app.kubernetes.io/instance=calico-node-prometheus","app.kubernetes.io/name=prometheus","statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0","prometheus=calico-node-prometheus","controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65","operator.prometheus.io/shard=0","operator.prometheus.io/name=calico-node-prometheus"]}
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_ip
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_name
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_name_aggr
                </th>
                <td
                  class="css-12h06wr"
                >
                  "fluentd-node-*"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_namespace
                </th>
                <td
                  class="css-12h06wr"
                >
                  "tigera-fluentd"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_port
                </th>
                <td
                  class="css-12h06wr"
                >
                  9081
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_type
                </th>
                <td
                  class="css-12h06wr"
                >
                  "wep"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_labels
                </th>
                <td
                  class="css-12h06wr"
                >
                  {"labels":["app.kubernetes.io/name=fluentd-node","controller-revision-hash=7c887f95cb","k8s-app=fluentd-node","pod-template-generation=1"]}
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_namespace
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_name
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_port
                </th>
                <td
                  class="css-12h06wr"
                >
                  "-"
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_service_port_num
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
              <tr
                class="css-1dmqyrt"
              >
                <th
                  class="css-1l1rd0u"
                >
                  dest_domains
                </th>
                <td
                  class="css-12h06wr"
                >
                  null
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          aria-labelledby="tabs-:r1:--tab-1"
          class="chakra-tabs__tab-panel css-18ruvq3"
          data-testid="tabs-tab-panel"
          id="tabs-:r1:--tabpanel-1"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="containerStyles"
          >
            <div
              class="_2bkNM"
              role="list"
            >
              <span
                aria-controls=":jsnvw:6:"
                aria-expanded="true"
                aria-label="collapse JSON"
                class="_oLqym _f10Tu _1MFti _1LId0"
                role="button"
                tabindex="0"
              />
              <span
                class="_3uHL6 _3eOF8"
              >
                {
              </span>
              <div
                id=":jsnvw:6:"
              >
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    start_time:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    1698940029
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    end_time:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    1698940352
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_ip:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_name:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_name_aggr:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "prometheus-calico-node-prometheus-*"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_namespace:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "tigera-prometheus"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    nat_outgoing_ports:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_port:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    source_type:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "wep"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:7:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_oLqym _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStyles"
                  >
                    source_labels:
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:7:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:8:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_oLqym _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStyles"
                      >
                        labels:
                      </span>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:8:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/managed-by=prometheus-operator"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/version=2.45.0"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/instance=calico-node-prometheus"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/name=prometheus"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "statefulset.kubernetes.io/pod-name=prometheus-calico-node-prometheus-0"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "prometheus=calico-node-prometheus"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "controller-revision-hash=prometheus-calico-node-prometheus-858dcf7b65"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "operator.prometheus.io/shard=0"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "operator.prometheus.io/name=calico-node-prometheus"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_ip:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_name:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_name_aggr:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "fluentd-node-*"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_namespace:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "tigera-fluentd"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_port:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    9081
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_type:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "wep"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="list"
                >
                  <span
                    aria-controls=":jsnvw:9:"
                    aria-expanded="true"
                    aria-label="collapse JSON"
                    class="_oLqym _f10Tu _1MFti _1LId0"
                    role="button"
                    tabindex="0"
                  />
                  <span
                    class="labelStyles"
                  >
                    dest_labels:
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    {
                  </span>
                  <div
                    id=":jsnvw:9:"
                  >
                    <div
                      class="_2bkNM"
                      role="list"
                    >
                      <span
                        aria-controls=":jsnvw:10:"
                        aria-expanded="true"
                        aria-label="collapse JSON"
                        class="_oLqym _f10Tu _1MFti _1LId0"
                        role="button"
                        tabindex="0"
                      />
                      <span
                        class="labelStyles"
                      >
                        labels:
                      </span>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        [
                      </span>
                      <div
                        id=":jsnvw:10:"
                      >
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "app.kubernetes.io/name=fluentd-node"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "controller-revision-hash=7c887f95cb"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "k8s-app=fluentd-node"
                          </span>
                          <span
                            class="_3uHL6 _3eOF8"
                          >
                            ,
                          </span>
                        </div>
                        <div
                          class="_2bkNM"
                          role="listitem"
                        >
                          <span
                            class="stringStyles"
                          >
                            "pod-template-generation=1"
                          </span>
                        </div>
                      </div>
                      <span
                        class="_3uHL6 _3eOF8"
                      >
                        ]
                      </span>
                    </div>
                  </div>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    }
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_namespace:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_name:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_port:
                  </span>
                  <span
                    class="stringStyles"
                  >
                    "-"
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_service_port_num:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                  <span
                    class="_3uHL6 _3eOF8"
                  >
                    ,
                  </span>
                </div>
                <div
                  class="_2bkNM"
                  role="listitem"
                >
                  <span
                    class="labelStyles"
                  >
                    dest_domains:
                  </span>
                  <span
                    class="valueStyles"
                  >
                    null
                  </span>
                </div>
              </div>
              <span
                class="_3uHL6 _3eOF8"
              >
                }
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
